...
  }

  return (
    <View
      style={{ flex: 1 }}
      collapsable={false}
      testID={ready ? 'explore-map-ready' : 'explore-map'}
    >
      <Map
        mapStyle={MAP_STYLE_URL}
        style={{ flex: 1 }}
        logo={false}
        attribution
...
